fixed font and white space

--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Righteous&family=Space+Grotesk:wght@300&display=swap');
+
 .App {
   text-align: center;
+  font-family: 'Space Grotesk';
 }
 
 .container-grid {
@@ -86,7 +89,7 @@ nav:hover {
   object-fit: fill;
   margin: 0;
   padding: 10px;
-  height: 100vh;
+  height: 100%;
 
 }
 
